# EGO-Project

./: Presentation.ppt
AlterEgo_Gazebo_Simulator/: .gitmodules  README.md
AlterEgo_Gazebo_Simulator/ROS-Gazebo-compliant-actuators-plugin/compliant_plugin/: CMakeLists.txt
AlterEgo_Gazebo_Simulator/ego_controller/arms_inv_kin_controller/: CMakeLists.txt  package.xml
AlterEgo_Gazebo_Simulator/ego_controller/arms_inv_kin_controller/include/arms_inv_kin/: inv_kin_gravity_comp.h  only_gravity_comp.h
AlterEgo_Gazebo_Simulator/ego_controller/arms_inv_kin_controller/include/utils/: pseudo_inversion.h  skew_symmetric.h
AlterEgo_Gazebo_Simulator/ego_controller/arms_inv_kin_controller/launch/: only_gravity_comp.launch
AlterEgo_Gazebo_Simulator/ego_controller/arms_inv_kin_controller/src/: inv_kin_gravity_comp.cpp  main_inv_kin_gravity_comp.cpp  main_only_gravity_comp.cpp  only_gravity_comp.cpp
AlterEgo_Gazebo_Simulator/ego_controller/invdyn_controller/: CMakeLists.txt  package.xml
AlterEgo_Gazebo_Simulator/ego_controller/invdyn_controller/config/: config.yaml  config_simulated.yaml
AlterEgo_Gazebo_Simulator/ego_controller/invdyn_controller/include/: InvdynController.h
AlterEgo_Gazebo_Simulator/ego_controller/invdyn_controller/launch/: alter_ego_control.launch  alter_ego_control_simulated.launch
AlterEgo_Gazebo_Simulator/ego_controller/invdyn_controller/msg/: Arm_Des_Pos.msg  Arm_Des_Vel.msg
AlterEgo_Gazebo_Simulator/ego_controller/invdyn_controller/src/: InvdynController.cpp  main_controller.cpp
AlterEgo_Gazebo_Simulator/ego_controller/lqr_controller/: CMakeLists.txt  package.xml
AlterEgo_Gazebo_Simulator/ego_controller/lqr_controller/include/: lqr.h
AlterEgo_Gazebo_Simulator/ego_controller/lqr_controller/src/: lqr.cpp  main_lqr.cpp  main_pitch_loop.cpp
AlterEgo_Gazebo_Simulator/ego_description/: CMakeLists.txt  package.xml
AlterEgo_Gazebo_Simulator/ego_description/config/: compliant_config.yaml  ego.rviz  ego_motors.yaml
AlterEgo_Gazebo_Simulator/ego_description/launch/: ego_gazebo.launch
AlterEgo_Gazebo_Simulator/ego_description/meshes/AlterEgo_v2.0/: Ego_sdr.pptx  body_sw.stl  flange_head.stl  head.stl  lidar.stl  mteg102_head.stl
AlterEgo_Gazebo_Simulator/ego_description/models/: cassettiera.stl  cassettiera_collision.stl
AlterEgo_Gazebo_Simulator/ego_description/urdf/: ego_robot.gazebo  ego_robot.urdf.xacro  ego_robot_gazebo.urdf.xacro  ego_v2_robot_gazebo.urdf.xacro
AlterEgo_Gazebo_Simulator/ego_description/worlds/: ego.world  ego_2Boxes_friction.world
AlterEgo_Gazebo_Simulator/ego_model/: CMakeLists.txt  package.xml
AlterEgo_Gazebo_Simulator/ego_model/include/: EgoModel.h
AlterEgo_Gazebo_Simulator/ego_model/launch/: Alter_Ego.launch  Alter_Ego_Simulated.launch  ego_model.launch  ego_model_simulated.launch
AlterEgo_Gazebo_Simulator/ego_model/src/: EgoModel.cpp  main_ego.cpp
AlterEgo_Gazebo_Simulator/ego_msgs/: CMakeLists.txt  package.xml
AlterEgo_Gazebo_Simulator/ego_msgs/msg/: Arm_Torque.msg  EgoPose2DUnicycle.msg  EgoQbAdvanceRef.msg  EgoTwist2DUnicycle.msg  Wheel_Torque.msg
AlterEgo_Gazebo_Simulator/utils/rbdl/addons/urdfreader/: urdfreader.cc
project_ego/: CMakeLists.txt  package.xml
project_ego/action/: moveEgo.action
project_ego/ego_poses/: greeting.json  greeting.txt  stop.json
project_ego/include/: EgoClass.h  gestureManager.h  utils.h
project_ego/launch/: egoScene.launch  move_base.launch  scene.launch
project_ego/models/AdrianTemple/: model.config  model.sdf
project_ego/models/Floor/: model.config  model.sdf
project_ego/models/chair/: model.sdf
project_ego/models/coffee_table/: model.config  model.sdf
project_ego/models/coffee_table/materials/scripts/: coffee_table_frame.material  coffee_table_surf.material
project_ego/models/large_window/: model.config  model.sdf
project_ego/models/pillar/: model.config  model.sdf
project_ego/models/small_floor/: model.config  model.sdf
project_ego/models/small_window/: model.config  model.sdf
project_ego/models/sofa/: model.config  model.sdf
project_ego/models/sofa/materials/scripts/: sofa.material
project_ego/models/table_conference/: model.config  model.sdf
project_ego/models/wall/: model.sdf
project_ego/models/window_large/: model.config  model.sdf
project_ego/msgs/: Event.msg  MatchInfo.msg
project_ego/src/: EgoClass.cpp  command_ego.cpp  eventManager.py  event_handler_node.py  gestureManager.cpp  gesture_node.cpp  main_ego.cpp  move_ego.cpp  move_wheels.cpp  state_machine_ego.py  state_machine_node.py  sttManager.py  stt_node.py  teleop_node.py  ttsManager.py  tts_node.py  utils_data.py  vel_converter_node.py
project_ego/srv/: Reply.srv
project_ego/utils/: adrian_temple_map.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  event_info.txt  global_costmap_params.yaml  local_costmap_params.yaml
project_ego/worlds/: adrian_temple_v4  ego.world
