<?xml version="1.0"?>
<package>
  <name>ego_model</name>
  <version>0.0.0</version>
  <description>The ego_model package</description>

  <maintainer email="frank@todo.todo">frank</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>invdyn_controller</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>invdyn_controller</run_depend>

  <export>
  </export>
  
</package>
