<?xml version="1.0"?>
<package>
  <name>ego_msgs</name>
  <version>0.0.0</version>
  <description>The package to generate the message for ego</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="gr.zambella@gmail.com">Grazia Zambella</maintainer>
  <maintainer email="giovanni.rosato@iit.it">Giovanni Rosato</maintainer>

  <license>BSD 3-Clause License</license>
  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
