<?xml version="1.0"?>
<package>
  <name>arms_inv_kin_controller</name>
  <version>0.0.0</version>
  <description>The arms_inv_kin package</description>

  <maintainer email="gr.zambella@gmail.com">Grazia Zambella</maintainer>
  <maintainer email="giovanni.rosato@iit.it">Giovanni Rosato</maintainer>

  <license>BSD 3-Clause License</license>
  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>qb_manager</build_depend>
  
  <run_depend>kdl_parser</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>qb_manager</run_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
