<?xml version="1.0"?>
<package>
  <name>invdyn_controller</name>
  <version>0.0.0</version>
  <description>The invdyn_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="frank@todo.todo">frank</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ego_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ego_msgs</run_depend>

  <export>
  </export>
</package>
