<?xml version="1.0"?>
<package>
  <name>lqr_controller</name>
  <version>0.0.0</version>
  <description>The lqr_controller package</description>

  <maintainer email="gr.zambella@gmail.com">Grazia Zambella</maintainer>
  <maintainer email="giovanni.rosato@iit.it">Giovanni Rosato</maintainer>

  <license>BSD 3-Clause License</license>
  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ego_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ego_msgs</run_depend>

  <export>
  </export>
  
</package>
